# Daedalus

./: .gitignore  DAEDALUS_Architecture_v0_5.md  DAEDALUS_Architecture_v0_6.md  DAEDALUS_Architecture_v0_7.md  LICENSE  README.md  download_qwen.py  download_qwen_robust.py  download_qwen_wget.py  pyproject.toml  status.md
config/: constitutional_core.yaml  eecf_principles.yaml  lagrangian.yaml  model_config.yaml  soul_bridge.yaml  soul_memory.yaml  training_config.yaml
core/: __init__.py  brainstem.py  consistency.py  constitutional_core.py  conversation.py  cortex_prompt.py  data_types.py  grounding.py  identity.py  ipt_monitor.py  limbic.py  memory_store.py  nervous_system.py  reflex_patterns.py  salience.py  secrets.py  soul_bridge.py  soul_memory.py  training_pair_filter.py
daedalus/: __init__.py  eval_prompts.py  prompt_variants.py  run_eval.py  score_eval.py
data/: seed_pairs.jsonl
doc/: USER_MANUAL.md  dependencies.json
eval/: __init__.py  anchor_pairs.jsonl  capability_probes.jsonl  core_identity_probes.jsonl  identity_probes.jsonl  morning_gate.py
identity/: current.yaml  limbic_state.json
logs/: night_summary_latest.json
memory/: limbic_trajectory_2026-04-13.json  limbic_trajectory_2026-04-14.json
night/: __init__.py  consolidation.py  incarnation.py  lagrangian_judge.py  predictive_judge.py  reflection.py  training_pairs.py
scripts/: api_server.py  calibrate_judge.py  introspect.py  nightly_routine.sh  repair_episodes.py  repair_finetune.py  run_night_cycle.py  seed.py  setup_env.py  start_day.py  validate_grounding.py
tests/: conftest.py  (+17 more)
(+75 files in other folders)
